<resources>
    <string name="app_name">Smart Vid Player</string>
    <string name="action_settings">Settings</string>
    <string name="home_title">Home</string>
    <string name="settings_title">Settings</string>
    <string name="sandra_kim">\u0040Sandrakim</string>
    <string name="number_row">No</string>
    <string name="viewers">Viewers</string>
    <string name="Views">Views</string>
    <string name="likes">Likes</string>
    <string name="data_is_from_cache_message">API Data is retrieved from cache</string>
    <string name="internet_is_not_available_message">Internet is not available</string>
</resources>