<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="12dp"
            android:background="@color/white"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:cardPreventCornerOverlap="false">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toRightOf="@id/txtNumberRow"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imgMinusView"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_margin="4dp"
                        android:adjustViewBounds="true"
                        android:padding="8dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_delete" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtViewers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:src="@drawable/selector_rounded_image"
                            android:text="2453"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtViewersTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:src="@drawable/selector_rounded_image"
                            android:text="@string/Views"
                            android:textColor="@color/text_color_gray"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imgPlusView"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_margin="4dp"
                        android:adjustViewBounds="true"
                        android:padding="8dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_plus" />

                </LinearLayout>

                <TextView
                    android:id="@+id/txtNumberRow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:fontFamily="@font/roboto_regular"
                    android:src="@drawable/selector_rounded_image"
                    android:text="@string/number_row"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteY="21dp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/txtNumberRow"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imgMinusLike"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_margin="4dp"
                        android:adjustViewBounds="true"
                        android:padding="8dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_delete" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtLikes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:src="@drawable/selector_rounded_image"
                            android:text="875"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtLikesTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_regular"
                            android:src="@drawable/selector_rounded_image"
                            android:text="@string/likes"
                            android:textColor="@color/text_color_gray"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imgPlusLike"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_margin="4dp"
                        android:adjustViewBounds="true"
                        android:padding="8dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_plus" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>