<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="dataModel"
            type="ir.hajhosseini.smartvideoplayer.model.room.videolist.VideoListCacheEntity" />

        <variable
            name="callback"
            type="ir.hajhosseini.smartvideoplayer.util.smartvideoplayercore.PlayerStateCallback" />

        <variable
            name="index"
            type="int" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="12dp"
            android:background="@color/white"
            app:cardCornerRadius="24dp"
            app:cardElevation="6dp"
            app:cardPreventCornerOverlap="false">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/imgUserProfile"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:adjustViewBounds="true"
                    android:padding="2dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/selector_rounded_image"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:fontFamily="@font/roboto_regular"
                    android:src="@drawable/selector_rounded_image"
                    android:text="@string/sandra_kim"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/imgUserProfile"
                    app:layout_constraintLeft_toRightOf="@id/imgUserProfile"
                    app:layout_constraintTop_toTopOf="@id/imgUserProfile" />

                <TextView
                    android:id="@+id/txtNumberRow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:fontFamily="@font/roboto_regular"
                    android:src="@drawable/selector_rounded_image"
                    android:text="@string/number_row"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/imgUserProfile"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/imgUserProfile" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewThumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:background="@color/white"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="6dp"
                    app:cardPreventCornerOverlap="false"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imgUserProfile">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/media_container"
                        android:layout_width="match_parent"
                        android:layout_height="480dp"
                        android:background="#fff"
                        android:scaleType="center">

                        <com.google.android.exoplayer2.ui.PlayerView
                            android:id="@+id/item_video_exoplayer"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            app:item_index="@{index}"
                            app:layout_constrainedHeight="true"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:shutter_background_color="@color/white"
                            app:on_state_change="@{callback}"
                            app:progressbar="@{progressBar}"
                            app:resize_mode="fill"
                            app:surface_type="texture_view"
                            app:thumbnail="@{imgThumbnail}"
                            app:video_url="@{dataModel.videoUrl}" />

                        <ImageView
                            android:id="@+id/imgThumbnail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            android:src="#fff"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ProgressBar
                            android:id="@+id/progressBar"
                            style="?android:attr/progressBarStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:visibility="gone"
                            app:layout_constraintBottom_toBottomOf="@id/imgThumbnail"
                            app:layout_constraintEnd_toEndOf="@id/imgThumbnail"
                            app:layout_constraintStart_toStartOf="@id/imgThumbnail"
                            app:layout_constraintTop_toTopOf="@id/imgThumbnail" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/txtViewers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="12dp"
                    android:fontFamily="@font/roboto_regular"
                    android:src="@drawable/selector_rounded_image"
                    android:text="2453"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="@id/imgUserProfile"
                    app:layout_constraintTop_toBottomOf="@id/cardViewThumbnail" />

                <TextView
                    android:id="@+id/txtViewersTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:fontFamily="@font/roboto_regular"
                    android:src="@drawable/selector_rounded_image"
                    android:text="@string/viewers"
                    android:textColor="@color/text_color_gray"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@id/txtViewers"
                    app:layout_constraintLeft_toRightOf="@id/txtViewers"
                    app:layout_constraintTop_toTopOf="@id/txtViewers" />

                <TextView
                    android:id="@+id/txtLikes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="12dp"
                    android:fontFamily="@font/roboto_regular"
                    android:src="@drawable/selector_rounded_image"
                    android:text="875"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toRightOf="@id/txtViewersTitle"
                    app:layout_constraintTop_toBottomOf="@id/cardViewThumbnail" />

                <TextView
                    android:id="@+id/txtLikesTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:fontFamily="@font/roboto_regular"
                    android:src="@drawable/selector_rounded_image"
                    android:text="@string/likes"
                    android:textColor="@color/text_color_gray"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@id/txtViewers"
                    app:layout_constraintLeft_toRightOf="@id/txtLikes"
                    app:layout_constraintTop_toTopOf="@id/txtViewers" />

                <ImageView
                    android:id="@+id/imgLike"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:adjustViewBounds="true"
                    android:padding="6dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_heart"
                    app:layout_constraintBottom_toBottomOf="@id/txtViewers"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/txtViewers" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="24dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imgLike" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>